# weather_bot

./: .gitignore  config.py  loader.py  main.py  project.json.example  pyproject.toml
core/: __init__.py
core/handlers/: __init__.py  check.py  echo.py  search.py  settlements.py  undefined.py  wealcom.py  weather_menu.py
core/states/: __init__.py  weather.py
markups/: __init__.py  dicts_weather.py  inline_markups.py  inline_sellector.py  inline_weather.py
storage/: __init__.py  data_type.py  database.py  database_api.py  database_postgres.py  database_sqlite.py  extract_data.py  sql.py  storage.py  storage_api.py
utils/: __init__.py  json_config_reader.py  tools.py
weather/: __init__.py  weather_api.py  weather_data.py  weather_service.py
