[tool.poetry]
name = "weather_bot"
version = "0.0.1"
description = ""
authors = ["Kirill Lapushinskiy <kirilllapushinskiy@yahoo.com>, Artem Shubin <shubin.artem@internet.ru>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
